5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1885_1650.log
== TEST (2019-07-09 10:08:06) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:")
p=0
if (x=="P"):
	p=p+1
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:08:31) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:")
p=0
if (x=="P"):
	p=p+1
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:08:55) 
-- CODE:
from numpy import*
x= array(input("digite a cor de cabelo das pessoas:"))
p=0
if (x=="P"):
	p=p+1
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:09:08) 
-- CODE:
from numpy import*
x= array(eval(input("digite a cor de cabelo das pessoas:")))
p=0
if (x=="P"):
	p=p+1
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:11:22) 
-- CODE:
from numpy import*
x= array(eval(input("digite a cor de cabelo das pessoas:")))
p=0
c=0
r=0
l=0
b=0
if (x=="P"):
	p=p+1
	print(p)
if(x=="C"):
	c=c+1
	print(c)
if(x=="R"):
	r=r+1
	print(r)
if(x=="L"):
	l=l+1
	print(l)
if (x=="B")
	b=b+1
	print(b)
	
-- ERROR:
File "XXXX", line 20
    if (x=="B")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:11:30) 
-- CODE:
from numpy import*
x= array(eval(input("digite a cor de cabelo das pessoas:")))
p=0
c=0
r=0
l=0
b=0
if (x=="P"):
	p=p+1
	print(p)
if(x=="C"):
	c=c+1
	print(c)
if(x=="R"):
	r=r+1
	print(r)
if(x=="L"):
	l=l+1
	print(l)
if (x=="B"):
	b=b+1
	print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:12:03) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:")))
p=0
c=0
r=0
l=0
b=0
if (x=="P"):
	p=p+1
	print(p)
if(x=="C"):
	c=c+1
	print(c)
if(x=="R"):
	r=r+1
	print(r)
if(x=="L"):
	l=l+1
	print(l)
if (x=="B"):
	b=b+1
	print(b)
	
-- ERROR:
File "XXXX", line 2
    x= input()))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:12:06) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:")
p=0
c=0
r=0
l=0
b=0
if (x=="P"):
	p=p+1
	print(p)
if(x=="C"):
	c=c+1
	print(c)
if(x=="R"):
	r=r+1
	print(r)
if(x=="L"):
	l=l+1
	print(l)
if (x=="B"):
	b=b+1
	print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:27:35) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split

p=0
c=0
r=0
l=0
b=0
if (x=="P"):
	p=p+1
	print(p)
if(x=="C"):
	c=c+1
	print(c)
if(x=="R"):
	r=r+1
	print(r)
if(x=="L"):
	l=l+1
	print(l)
if (x=="B"):
	b=b+1
	print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:36:30) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')

p=0
c=0
r=0
l=0
b=0
if (x=="P"):
	p=p+1
	print(p)
if(x=="C"):
	c=c+1
	print(c)
if(x=="R"):
	r=r+1
	print(r)
if(x=="L"):
	l=l+1
	print(l)
if (x=="B"):
	b=b+1
	print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:37:35) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')

p=0
c=0
r=0
l=0
b=0
if (x=="P"):
	p=p+1
	
if(x=="C"):
	c=c+1
	
if(x=="R"):
	r=r+1
	
if(x=="L"):
	l=l+1
	
if (x=="B"):
	b=b+1

print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:38:50) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
while (t<=size(x))
	if (x=="P"):
		p=p+1
	
	if(x=="C"):
		c=c+1
	
	if(x=="R"):
		r=r+1
	
	if(x=="L"):
		l=l+1
	
	if (x=="B"):
		b=b+1
	t=t+1

print(p,c,r,l,b)
	
-- ERROR:
File "XXXX", line 9
    while (t<=size(x))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:38:57) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
while (t<=size(x)):
	if (x=="P"):
		p=p+1
	
	if(x=="C"):
		c=c+1
	
	if(x=="R"):
		r=r+1
	
	if(x=="L"):
		l=l+1
	
	if (x=="B"):
		b=b+1
	t=t+1

print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:39:41) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x=="P"):
		p=p+1
	
	if(x=="C"):
		c=c+1
	
	if(x=="R"):
		r=r+1
	
	if(x=="L"):
		l=l+1
	
	if (x=="B"):
		b=b+1
	

print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:41:20) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',').upper()
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	

print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:41:30) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	

print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:41:55) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	

print(p,c,r,l,b)
	
-- EXECUTION TIME:
1.03277
-- TEST CASE 1:
---- input:
B,L,R,R,C,B,L,P,P
---- correct output:
2
[2 1 2 2 2]
---- user output:
2 1 2 2 2
-- TEST CASE 2:
---- input:
B,L,L,L,C,B,L,P,P
---- correct output:
4
[2 1 0 4 2]
---- user output:
2 1 0 4 2
-- TEST CASE 3:
---- input:
L,C,B,L,P,P
---- correct output:
2
[2 1 0 2 1]
---- user output:
2 1 0 2 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:42:03) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	

print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:42:11) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	

print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:43:16) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	
print(max(x))
print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:43:58) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	
print(max(size(x)))
print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:45:09) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	
v=zeros(5,dtype=int)
print(v[p],v[c],v[r],v[l],v[b])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:45:27) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	
v=zeros(5,dtype=int)
print(p,c,r,l,b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:47:51) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
	
v[0]==p
print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:49:50) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
for j in range(v):
	if v[j]==v[0]:
		v==p
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:06) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
for j in range(size(v)):
	if v[j]==v[0]:
		v==p

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:25) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
	
	if(x[i]=="C"):
		c=c+1
	
	if(x[i]=="R"):
		r=r+1
	
	if(x[i]=="L"):
		l=l+1
	
	if (x[i]=="B"):
		b=b+1
for j in range(size(v)):
	if v[j]==v[0]:
		v[j]==v[p]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:52:25) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
		v[0]==p
	if(x[i]=="C"):
		c=c+1
		v[1]==c
	if(x[i]=="R"):
		r=r+1
		v[2]==r
	if(x[i]=="L"):
		l=l+1
		v[3]==l
	if (x[i]=="B"):
		b=b+1
		v[4]==b
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:53:05) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
		v[0]=="P"
	if(x[i]=="C"):
		c=c+1
		v[1]==c
	if(x[i]=="R"):
		r=r+1
		v[2]==r
	if(x[i]=="L"):
		l=l+1
		v[3]==l
	if (x[i]=="B"):
		b=b+1
		v[4]==b
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:54:01) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
		v[0]==v[p]
	if(x[i]=="C"):
		c=c+1
		v[1]==c
	if(x[i]=="R"):
		r=r+1
		v[2]==r
	if(x[i]=="L"):
		l=l+1
		v[3]==l
	if (x[i]=="B"):
		b=b+1
		v[4]==b
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:54:33) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
		v[0]==p
	if(x[i]=="C"):
		c=c+1
		v[1]==c
	if(x[i]=="R"):
		r=r+1
		v[2]==r
	if(x[i]=="L"):
		l=l+1
		v[3]==l
	if (x[i]=="B"):
		b=b+1
		v[4]==b
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:55:00) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
		v[0]==p
	if(x[i]=="C"):
		c=c+1
		v[1]==c
	if(x[i]=="R"):
		r=r+1
		v[2]==r
	if(x[i]=="L"):
		l=l+1
		v[3]==l
	if (x[i]=="B"):
		b=b+1
		v[4]==b
	print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:59:10) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
		v[0]=p
	if(x[i]=="C"):
		c=c+1
		v[1]=c
	if(x[i]=="R"):
		r=r+1
		v[2]=r
	if(x[i]=="L"):
		l=l+1
		v[3]=l
	if (x[i]=="B"):
		b=b+1
		v[4]=b
print(v)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:59:28) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
		v[0]=p
	if(x[i]=="C"):
		c=c+1
		v[1]=c
	if(x[i]=="R"):
		r=r+1
		v[2]=r
	if(x[i]=="L"):
		l=l+1
		v[3]=l
	if (x[i]=="B"):
		b=b+1
		v[4]=b
print(max(v))
print(v)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 10:59:35) 
-- CODE:
from numpy import*
x= input("digite a cor de cabelo das pessoas:").split(',')
t=0
p=0
c=0
r=0
l=0
b=0
v=zeros(5,dtype=int)
for i in range(size(x)):
	if (x[i]=="P"):
		p=p+1
		v[0]=p
	if(x[i]=="C"):
		c=c+1
		v[1]=c
	if(x[i]=="R"):
		r=r+1
		v[2]=r
	if(x[i]=="L"):
		l=l+1
		v[3]=l
	if (x[i]=="B"):
		b=b+1
		v[4]=b
print(max(v))
print(v)



-- EXECUTION TIME:
1.13966
-- TEST CASE 1:
---- input:
B,L,R,R,C,B,L,P,P
---- correct output:
2
[2 1 2 2 2]
---- user output:
2
[2 1 2 2 2]
-- TEST CASE 2:
---- input:
B,L,L,L,C,B,L,P,P
---- correct output:
4
[2 1 0 4 2]
---- user output:
4
[2 1 0 4 2]
-- TEST CASE 3:
---- input:
L,C,B,L,P,P
---- correct output:
2
[2 1 0 2 1]
---- user output:
2
[2 1 0 2 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
